--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,15 @@ Flask==1.1.1
 # HTTP server.
 gunicorn==20.0.4
 
+
 # Flask extensions.
 Flask-DebugToolbar==0.10.1
+
 Flask-SQLAlchemy==2.4.1
+SQLAlchemy-Utils==0.36.1
+psycopg2-binary==2.8.4
+
+Flask-Login==0.4.1
+
+Flask-WTF==0.14.2
+WTForms==2.2.1
